fixed cards alignment

--- a/src/style/DisplayPost.css
+++ b/src/style/DisplayPost.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 300px;
-    margin: 20px;
+    margin: 2rem auto;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
   }
@@ -40,7 +40,8 @@
   
   @media (max-width: 767px) {
     .card {
-      width: 100%;
+      width: 80%;
+      margin: 0 auto;
     }
   }
   
