--- a/src/style/menu.css
+++ b/src/style/menu.css
@@ -18,7 +18,7 @@
     left: 0 !important;
   }
   .menu__btn {
-    position: fixed;
+    position: absolute;
     top: 40px;
     left: 90%;
     width: 26px;
